--- a/app/src/main/res/layout/activity_cek_bilangan.xml
+++ b/app/src/main/res/layout/activity_cek_bilangan.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_arrow_back_ios_24"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:title="@string/btn2"/>
 
     </com.google.android.material.appbar.AppBarLayout>
