--- a/app/src/main/res/layout/activity_game_puzzle.xml
+++ b/app/src/main/res/layout/activity_game_puzzle.xml
@@ -13,10 +13,12 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/tbGame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/puzzle_menu"
             app:navigationIcon="@drawable/ic_arrow_back_ios_24"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:title="@string/game_puzzle" />
     </com.google.android.material.appbar.AppBarLayout>
 
