--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="ButtonStyle">
         <item name="android:layout_width">75dp</item>
         <item name="android:layout_height">75dp</item>
-<!--        <item name="android:onClick">buttonOnClick</item>-->
+        <!--        <item name="android:onClick">buttonOnClick</item>-->
         <item name="android:layout_margin">5dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="btnDefaultKalkulator" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/button_calculator</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:elevation">4dp</item>
     </style>
 </resources>
